--- a/public/index.html
+++ b/public/index.html
@@ -7,37 +7,17 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A website where you can look what activites you can go on this month and you can create your own activities! You can follow your favorite activities, like if you like going to the movies you can get a notification every time someone postes a movie activity! 
+      It has an easy calendar where you can see all upcoming activities and sign up to go to them. It is east to create a new activity and you can see how many people how has signed up for the different activities. 
+      This is an easy and fun way to make new friends and socialize after the restrictions after corona has been liftet!"
     />
     <link rel="apple-touch-icon" href="./logo.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Saira" as="font">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Activity Today</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
