trying to fix location

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Saira" as="font">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Activity Today</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDg9kG29RUD5-FzXDUDUP0OqGDHYyo1gs&libraries=places"></script>
+    <script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDDg9kG29RUD5-FzXDUDUP0OqGDHYyo1gs&callback=initMap"></script>
     <script>
       var host = "www.URL.com" || "URL.com";
       if ((host == window.location.host) && (window.location.protocol != "https:")){
