Added CSS for upcoming events and cleanup of some code

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       This is an easy and fun way to make new friends and socialize after the restrictions after corona has been liftet!"
     />
     <link rel="apple-touch-icon" href="./logo.png" />
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Saira" as="font">
+    <link as="style" rel="stylesheet preload prefetch" href="https://fonts.googleapis.com/css?family=Saira&display=swap">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Activity Today</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDg9kG29RUD5-FzXDUDUP0OqGDHYyo1gs&libraries=places"></script>
