Update firestore settings, removed unused code, changed css.

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
       It has an easy calendar where you can see all upcoming activities and sign up to go to them. It is east to create a new activity and you can see how many people how has signed up for the different activities. 
       This is an easy and fun way to make new friends and socialize after the restrictions after corona has been liftet!" />
   <link defer rel="apple-touch-icon" href="./logo.png" />
-  <link defer rel="preload" href="https://fonts.googleapis.com">
-  <link defer rel="preload" href="https://fonts.gstatic.com" crossorigin>
-  <link defer rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Saira&display=swap">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Saira&display=swap">
   <link defer rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Activity Today</title>
 </head>
